--- a/templates/home.html
+++ b/templates/home.html
@@ -5,10 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <!-- <script src="html5-qrcode.min.js"></script> -->
+    <script src="{{url_for('static', filename='html5-qrcode.min.js')}}"></script>
+    <!-- <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script> -->
 </head>
 <body>
     {% for i in data%}
     <a> {{ i }}</a>
     {% endfor %}
+
+    <div id="reader" style="width: 400px; height: 300px;"></div>
+    <div id="result" ></div>
+
+    <script>
+      const scanner = new Html5QrcodeScanner('reader',{
+        qrbox:{
+          width:250,
+          height:250,
+        },
+        fps:20,
+      });
+
+      scanner.render(success,error);
+
+      function success(result){
+        document.getElementById('result').innerHTML=`
+        <h2>Click on Submit to confirm!</h2>
+        <form action="" method="post">
+          <input type="hidden" value=${result} name="result"></input>
+          <input type="submit" value="Confirm">
+        </form>
+        `;
+
+        scanner.clear();
+        console.log(result);
+        document.getElementById('reader').remove();
+      }
+
+      function error(err){
+        console.error(err);
+      }
+
+    </script>
+    
+
 </body>
 </html>
