--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{%block body%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,16 +9,57 @@
     <title>Login</title>
 </head>
 <body>
-    {{ data }}
-    <form action="http://127.0.0.1:5000/login" method="POST">
-        <label for="username">Username</label>
-        <input id="username" type="text" name="username" required>
+        
 
-        <label for="password">Password</label>
-        <input type="password" name="password" required>
-
-        <input type="submit" value="submit">
-
+    <div class="container-fluid ">
+        <div class='container-fluid main-container m-3 shadow-lg p-3 mb-5 bg-body rounded'>
+          <h2>Login</h2>
+      
+        <form action="{{url_for('login')}}" method="post">
+      <div class="row mb-3">
+        <label for="username" class="col-sm-2 col-form-label">Username</label>
+        <div class="col-sm-10">
+          <input type="username" class="form-control" 
+          id="username" name='username'
+          placeholder="Username"
+          required/>
+        </div>
+      </div>
+      <div class="row mb-3">
+        <label for="password" class="col-sm-2 col-form-label">Password</label>
+        <div class="col-sm-10">
+          <input type="password" class="form-control" 
+          id="password" name='password'
+          placeholder="Password"
+          required
+          />
+        </div>
+      </div>
+      {% with messages = get_flashed_messages(with_categories=True) %}
+      {% for category, message in messages %}
+      {% if category == "error" %}
+      <div class="alert alert-danger m-2 p-2" role="alert">
+      {{ message }}
+      </div>
+      {% else %}
+      <div class="alert alert-success m-2 p-2" role="alert">
+      {{ message }}
+      </div>
+      {% endif %}
+      {% endfor %}
+      {% endwith %}
+      <div class='text-center'>
+      <a href="{{url_for('register')}}">New User?Register here</a><br />
+      <button type="submit" class="btn btn-primary"
+      name='login' id='login' value="submit"
+      >Login</button>
+      </div>
     </form>
+        </div>
+    
+    </div>
+
 </body>
+
 </html>
+{%endblock%}
