--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block title%}<title>Home</title> {%endblock%}
-    <script src="{{url_for('static', filename='html5-qrcode.min.js')}}"></script>
+
 </head>
 <body>
 
@@ -16,10 +16,14 @@
     <div class="row justify-content-center">
       <div class="col-md-4 mx-auto m-5">
         <!-- Your content here -->
+        {{data}}
         <h6>Scan Qr code to confirm your Appointment</h6>
 
       
-        <div id="reader" class="border shadow" style="width: 400px; height: 300px;"></div>
+        <div id="reader" class="border shadow" style="width: 504px; height: 385px;">
+          <img id="myimage" align="center" src="{{url_for('video_feed') }}" alt="Webcam feed" width="500" height="375">
+        </div>
+
         <div id="result" ></div>
         {% with messages = get_flashed_messages(with_categories=True) %}
         {% for category, message in messages %}
@@ -38,44 +42,15 @@
     </div>
   </div>
 
-
-
-    <script>
-      function onScanSuccess(decodedText, decodedResult) {
-    // Handle on success condition with the decoded text or result.
-    console.log(`Scan result: ${decodedText}`, decodedResult);
-}
-
-      const scanner = new Html5QrcodeScanner('reader',{
-        qrbox:{
-          width:250,
-          height:250,
-        },
-        fps:20,
-      });
-
-      scanner.render(success,error);
-      console.log(result)
-      function success(result){
-        document.getElementById('result').innerHTML=`
-        <h2>Click on Submit to confirm!</h2>
-        <form action="{{url_for("home")}}" method="post">
-          <input type="hidden" value=${result} name="result"></input>
-          <input type="submit" value="Confirm">
-        </form>
-        `;
-
-        // scanner.clear();
-        console.log(result);
-        document.getElementById('reader').remove();
-      }
-
-      function error(err){
-        console.error(err);
-      }
-
-    </script>
     
+  <script>
+    // JavaScript code in your frontend
+  setInterval(() => {
+    fetch('/confirm_qr')
+      .catch(error => console.log(error));
+  }, 10000);
+  
+  </script>
 
 </body>
 </html>
