--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{{super()}}
 {%block body%}
 <!DOCTYPE html>
 <html lang="en">
@@ -56,9 +57,7 @@
       </div>
     </form>
         </div>
-    
     </div>
-
 </body>
 
 </html>
