--- a/templates/bookslot.html
+++ b/templates/bookslot.html
@@ -51,7 +51,8 @@
                                 <ul class=" ">
                           <h6>Book Your Slot</h6>
                           <h6>Today's Date: {{today_date}}</h6>
-                        {% for key in data %}
+                          {% if not data %}<P>No Slots for today!</P>{%endif%}
+                          {% for key in data %}
                           <div
                           class="flex justify-content-between align-items-center m-2 row"
                           >
