--- a/templates/home.html
+++ b/templates/home.html
@@ -8,20 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block title%}<title>Home</title> {%endblock%}
-    <link
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    rel="stylesheet"
-    />
-    <!-- Google Fonts -->
-    <link
-    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    rel="stylesheet"
-    />
-    <!-- MDB -->
-    <link
-    href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css"
-    rel="stylesheet"
-    />
+    
 </head>
 <body>
 
@@ -32,9 +19,9 @@
         {{data}}
         {{arr}}
         <h6>Scan Qr code to confirm your Appointment</h6>
-
+        Check Profile page for Appointment Status
       
-        <div  >
+        <div>
           <img id="myimage" align="center" src="{{url_for('qrcode.video_feed') }}" alt="Webcam feed" width="500" height="375">
         </div>
 
@@ -62,13 +49,10 @@
     fetch('/confirm_qr')
     .then(response=>response.json())
     .catch(error => console.log(error));
-  }, 10000);
+  }, 1000);
   
   </script>
-<script
-type="text/javascript"
-src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"
-></script>
+
 
   
 
